--- a/app/src/main/res/layout-land/activity_main2.xml
+++ b/app/src/main/res/layout-land/activity_main2.xml
@@ -19,28 +19,25 @@
             android:id="@+id/textView_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="48dp"
             android:fontFamily="@font/dancing_script"
             android:text="Profile Links"
             android:textColor="@color/slate_blue"
             android:textSize="40dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.499"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/fb_btn"
-            android:layout_width="0dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="72dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginTop="36dp"
             android:backgroundTint="@color/medium_blue"
             android:drawableRight="@drawable/fb12gg_"
             android:text="Facebook"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_heading" />
 
@@ -48,8 +45,8 @@
             android:id="@+id/insta_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="220dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="30dp"
             android:backgroundTint="@color/insta_pink"
             android:drawableRight="@drawable/instagram_ic1"
@@ -57,38 +54,35 @@
             android:text="Intagram"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fb_btn" />
+            app:layout_constraintStart_toEndOf="@+id/fb_btn"
+            app:layout_constraintTop_toBottomOf="@+id/textView_heading" />
 
         <Button
             android:id="@+id/whatsapp_btn"
-            android:layout_width="0dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginTop="16dp"
             android:backgroundTint="@color/green"
             android:drawableRight="@drawable/whatsapp_ic"
             android:text="Whatsapp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/insta_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/fb_btn" />
 
         <Button
             android:id="@+id/linked_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginStart="212dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="30dp"
             android:backgroundTint="@color/blue_123"
             android:drawableRight="@drawable/linked_in"
             android:text="Linked In"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/whatsapp_btn" />
+            app:layout_constraintStart_toEndOf="@+id/whatsapp_btn"
+            app:layout_constraintTop_toBottomOf="@+id/insta_btn" />
 
         <Button
             android:id="@+id/back_btn"
